@@ -19,9 +19,11 @@ In order to uncompress RAR archives, fimgs will use 'unrar-nonfree' or 'rar' or 
 
 In order to uncompress ZIP archives, fimgs will use 'zip'.
 
+In order to uncompress BZ2 files, 'bunzip2' will be used, if present.
+
 In order to uncompress TAR.GZ or TAR.BZ2 or TAR.XZ archives, fimgs will use 'tar'.
 
-In order to fetch http:// or https:// prefixed URLS, 'wget' will be used.
+In order to fetch http:// or https:// prefixed URLS, 'wget' will be used, if present.
 
 In order to fetch ssh: prefixed host:path locations, 'scp' will be used.
 
